--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- adding comment to learn git and git -->
+    <!-- adding comment to learn git and git (for conflict)-->
     <div class="container">
       <h1>To-Do List</h1>
       <div class="input-container">
